--- a/app/src/main/res/layout/activity_actualizar_contactos.xml
+++ b/app/src/main/res/layout/activity_actualizar_contactos.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:backgroundTint="#009688"
+        android:backgroundTint="#8BC34A"
         android:text="Atras"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +116,7 @@
         android:id="@+id/btnActualizarAU"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#009688"
+        android:backgroundTint="#8BC34A"
         android:text="Actualizar"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintBottom_toBottomOf="parent"
